# calousel

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  extracted_paper.txt  index.html
docker/: entrypoint.sh
examples/configs/calousel/: calousel_testbed_a.yaml  calousel_testbed_b.yaml
examples/configs/discocal/: discocal_cam0.yaml  discocal_cam1.yaml
examples/data/: gt.yaml
examples/output/intrinsic_results/cam0/: Es_covariance_blocks.txt  intrinsic_parameters.yaml  jacob.txt  measurements.txt
examples/output/intrinsic_results/cam1/: Es_covariance_blocks.txt  intrinsic_parameters.yaml  jacob.txt  measurements.txt
examples/output/keyframe_results/testbed_A/: metadata.yaml
examples/output/keyframe_results/testbed_A/cam0/: keyframe_data.yaml
examples/output/keyframe_results/testbed_A/cam1/: keyframe_data.yaml
examples/output/keyframe_results/testbed_B/: metadata.yaml
examples/output/keyframe_results/testbed_B/cam0/: keyframe_data.yaml
examples/output/keyframe_results/testbed_B/cam1/: keyframe_data.yaml
examples/scripts/: evaluate_testbed_results.py  run_calousel_pipeline_examples.sh  run_discocal_examples.sh  run_keyframe_extract_examples.sh  run_optimize_extrinsics_examples.sh
src/calousel/: CMakeLists.txt  package.xml
src/calousel/config/: calousel_pipeline.yaml
src/calousel/include/calousel/: CLieAlgebra.hpp  config_loader.hpp  extrinsic_optimization_impl.hpp  key_frame_acquisition.hpp  keyframe_extraction_impl.hpp  keyframe_storage.hpp  logging.hpp  optimize.hpp  thread_safe_queue.hpp  utils.hpp
src/calousel/launch/: multi_keyframe_extract.launch.py  multi_optimize_extrinsics.launch.py
src/calousel/src/: CLieAlgebra.cpp  calousel_pipeline.cpp  extrinsic_optimization_impl.cpp  key_frame_acquisition.cpp  keyframe_extraction_impl.cpp  keyframe_extractor_cli.cpp  keyframe_storage.cpp  optimize.cpp  optimize_extrinsics_cli.cpp
src/camera_image_saver/: CMakeLists.txt  package.xml
src/camera_image_saver/src/: image_saver_node.cpp
static/css/: index.css
